[package]
name = "partage"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }
reqwest-streams = "0.9.0"
serde = {version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
